--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,5 @@
-asgiref==3.6.0
-click==8.1.3
-colorama==0.4.6
-Django==4.1.7
-django-request==1.6.2
-Flask==2.2.3
-gunicorn==20.1.0
-importlib-metadata==6.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-MarkupSafe==2.1.2
-numpy==1.24.2
-python-dateutil==2.8.2
-scikit-learn==1.2.1
-scipy==1.10.1
-six==1.16.0
-sklearn==0.0.post1
-sqlparse==0.4.3
-threadpoolctl==3.1.0
-tzdata==2022.7
-Werkzeug==2.2.3
-zipp==3.14.0
+Flask
+gunicorn
+numpy
+scikit-learn
+scipy
